Ensure buttons' texts are truncated with ellipsis instead of overflowing

--- a/packages/frontend/src/features/Design/components/Interactive/components/CreateNewPresetOptions/index.module.css
+++ b/packages/frontend/src/features/Design/components/Interactive/components/CreateNewPresetOptions/index.module.css
@@ -12,7 +12,9 @@
 .create-new-item-button {
     flex-grow: 1;
 
-    display: flex;
+    display: grid;
+    grid-template-rows: minmax(0, 1fr);
+    grid-template-columns: auto minmax(0, 1fr);
     justify-content: center;
     align-items: center;
     gap: 4px;
@@ -21,6 +23,7 @@
 
     color: black;
     font-size: 1rem;
+    text-wrap: nowrap;
 
     border: 1px solid black;
     background-color: rgb(209, 209, 209);
